# DouReview

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: V1-architecture.md  V2-architecture.md  V2-design.md  design.md
src/doureview/: .env.example  cli.py  code_explorer.py  config.py  diff_parser.py  errors.py  llm_client.py  logger.py  models.py  pipeline.py  prompt_builder.py  report_generator.py  tools.py
tests/: conftest.py  test_diff_parser.py  test_prompt_builder.py  test_report_generator.py
