[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dourevew"
version = "0.1.0"
description = "AI-powered code review agent for personal developers"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dourevew = "dourevew.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doureview"]
